fix map z-index

--- a/app/assets/stylesheets/contact.css.scss
+++ b/app/assets/stylesheets/contact.css.scss
@@ -4,8 +4,9 @@
 
   .form {
     width: 40%;
-    float: right;
-    margin-top: 30px;
+    position: absolute;
+    top: calc($header-height + 30px);
+    right: 40px;
     z-index: 999;
     .custom-form {
       background: #F5F5F5;
@@ -21,7 +22,6 @@
     left: 0;
     width: 100%;
     height: 800px;
-    z-index: -1;
 
     border: 1px solid #dfdfdf;
   }
